--- a/index.html
+++ b/index.html
@@ -1249,7 +1249,7 @@
                             <i class="fas fa-envelope text-2xl tea-accent mt-1"></i>
                             <div>
                                 <h4 class="font-semibold tea-primary mb-1">이메일</h4>
-                                <p class="tea-dark">Dorimwon@naver.com</p>
+                                <p class="tea-dark">dorimwon@naver.com</p>
                             </div>
                         </div>
                         
