--- a/index.html
+++ b/index.html
@@ -797,7 +797,6 @@
                     <div class="video-container">
                         <video controls poster="https://images.unsplash.com/photo-1571934811356-5cc061b6821f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&h=675">
                             <source src="attached_assets/도림원_1750857897242.mp4" type="video/mp4">
-                            귀하의 브라우저는 비디오 태그를 지원하지 않습니다.
                         </video>
                     </div>
                     <div class="p-6">
@@ -1351,7 +1350,7 @@
                     <h4 class="font-semibold mb-4">연락처</h4>
                     <div class="space-y-2 text-sm">
                         <p class="text-gray-300">전화: 051-645-8858</p>
-                        <p class="text-gray-300">이메일: Dorimwon@naver.com</p>
+                        <p class="text-gray-300">이메일: dorimwon@naver.com</p>
                         <p class="text-gray-300">주소: 부산광역시 남구 대연동 수영로 225 3층</p>
                     </div>
                 </div>
