--- a/index.html
+++ b/index.html
@@ -795,9 +795,13 @@
             <div class="mb-12">
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden">
                     <div class="video-container">
-                        <video controls poster="https://images.unsplash.com/photo-1571934811356-5cc061b6821f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&h=675">
-                            <source src="attached_assets/도림원_1750857897242.mp4" type="video/mp4">
-                        </video>
+                        <iframe
+                            src="https://www.youtube.com/embed/_1yqL0OvmgQ"
+                            title="YouTube video player"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen
+                            class="w-full h-full rounded-lg border-0"
+                        ></iframe>
                     </div>
                     <div class="p-6">
                         <h3 class="text-xl font-bold tea-primary mb-2">도림원 소개 영상</h3>
